--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.3
 asgiref==3.2.10
+autopep8==1.5.5
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -17,9 +18,9 @@ lockfile==0.12.2
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
-Pillow==7.2.0
 progress==1.5
-psycopg2-binary==2.8.6
+psycopg2-binary==2.8.5
+pycodestyle==2.6.0
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.1
@@ -27,6 +28,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.3.1
+toml==0.10.2
 urllib3==1.25.8
 webencodings==0.5.1
 whitenoise==5.2.0
